# ground_remover

./: .gitignore  CMakeLists.txt  README.md  install.sh
config/: config.txt
data/: sample_cloud.pcd
src/: main.cpp
